Add tape lookup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
         "map": "cpp",
         "__assert": "cpp",
         "tuple": "cpp"
-    }
+    },
+    "idf.pythonInstallPath": "/opt/miniconda3/bin/python"
 }
